[tool.poetry]
name = "bpx-py"
version = "0.1.0"
description = ""
authors = ["sndmndss <yanfedorov120505@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
aiohttp = "^3.9.5"
cryptography = "^42.0.5"
pytest = "^8.2.0"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
